--- a/_less/variables.less
+++ b/_less/variables.less
@@ -2,7 +2,8 @@
 // @@@@@@@@@@@ GLOBAL     @@@@@@@@@@@
 // @@@@@@@@@@@ VARIABLES  @@@@@@@@@@@
 
-
+/* Bootstrap less customization */
+@grid-gutter-width: 0px;
 
 /*Colors for headers, banners, footers*/
 
