--- a/_less/article.less
+++ b/_less/article.less
@@ -1,5 +1,3 @@
-
-
 /*   ========================================================================================================     */
 
 // @@@@@@@@@@@ MAIN     @@@@@@@@@@@
@@ -9,51 +7,44 @@
 
 .article-title {
     
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   font: 200 28px/1.2em @font-header, sans-serif;
   color: @article-color;
   letter-spacing: 1px;
     
 }
 
-.article_image
-{
- 
-    width: 530px;
-    height: 260px;
-    margin: 20px 20px 20px 20px;
-
+#article-content {
+    margin-top: 10px;
 }
 
-.border{
-    
-  border-right: solid 1px;
-  border-color: @footer-color;   
-  padding-right: 70px;  
-    
+.article-sidebar {
+    margin-left: 30px; 
+    margin-top: 60px;
+    float: left; 
 }
 
+.main-layout {
+    margin-top: 30px;
+    margin-left: 15px;
+    float: left
+}
 
-#sidebar {
+.bs-docs-sidebar {
+    text-align: right;
+    margin-top: 50px;
+    float: left;
+}
+
+.affix{width:200px;}
+
+#sidenav {
     border-right: 1px solid #e5e5e5;
-    top: 120px;
-    left: 220px;
+    margin-right: -120px;
 }
 
 .fixed {
     position: fixed;
-}
-
-.article-sidebar {
-    margin-top: 30px;
-}
-
-/* sidebar */
-.bs-docs-sidebar {
-    padding-left: 80px;
-    margin-top: 20px;
-    margin-bottom: 20px;
 }
 
 /* all links */
@@ -123,7 +114,7 @@
 
 .group {
     
-    width: 800px;
+    width: auto;
     height: auto;
 }
 .group .subgroup {
