--- a/_less/headerfooter.less
+++ b/_less/headerfooter.less
@@ -20,6 +20,7 @@ body {
 
 .header-brand-baseSpace {
   float: left;
+  padding-left: 30px;
   height: 50px;
   line-height: 20px;
   padding-top: 15px;
@@ -29,6 +30,7 @@ body {
 
 .header-brand-illumina {
   float: right;
+  padding-right: 30px;
   height: 50px;
   line-height: 20px;
   padding-top: 15px;
