--- a/_includes/article-breadcrumbs.html
+++ b/_includes/article-breadcrumbs.html
@@ -2,10 +2,11 @@
 
 	<div class="row">
 		<div class="bs-nav-titlebar">
-			<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+			<div class="col-xs-2">
 	        	<!-- burger icon -->
+
 	        </div>
-			<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+			<div class="col-xs-10">
 				<div class="bs-nav-titlebar-group">
 					{% if page.section_root == null || page.section_root == false %}
 					<a class="btn illumina-gray bs-nav-back" href="{{ site.baseurl }}/articles/">
