--- a/_includes/article-sidebar.html
+++ b/_includes/article-sidebar.html
@@ -1,4 +1,4 @@
-<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 article-sidebar">
+<div class="col-xs-2 article-sidebar">
 
 
       <div class="block">
@@ -79,7 +79,7 @@
     </div>
 
 
-<div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"></div>
+<div class="col-xs-1"></div>
 
 </div><!-- /.blog-sidebar -->
 
