--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -10,7 +10,7 @@ hide_welcome_banner: true
   <div class="row">
     
     <!--  Side Nav Bar  -->
-    <nav class="col-xs-2 col-sm-2 col-md-2 col-lg-2 bs-docs-sidebar">
+    <nav class="col-xs-2 bs-docs-sidebar">
         <div id="myAffix" class="container" data-spy="affix">
           <ul id="sidenav" class="nav nav-stacked">
             <li>
@@ -40,7 +40,7 @@ hide_welcome_banner: true
     <!--  Side Nav Bar ends -->
 
     <!--  Main article content with title  -->
-    <div class="col-xs-7 col-sm-7 col-md-7 col-lg-7 main-layout">
+    <div class="col-xs-7 main-layout">
       
       <!-- Article Header -->
       <h1 class="article-title">{{ page.title }}</h1>
@@ -48,7 +48,7 @@ hide_welcome_banner: true
 
       <!-- Article Body -->
       <div id="article-content">
-        <!-- dummy content for nav 
+        <!-- dummy content for nav -->
 
                           <section id="GroupA" class="group">
                               <h3>Group A</h3>
@@ -86,9 +86,9 @@ hide_welcome_banner: true
                                   <p>In this article, we’ll explain exactly what z-index is, how it has been misunderstood, and we’ll discuss some practical uses for it. We’ll also describe some of the browser differences that can occur, particularly in previous versions of Internet Explorer and Firefox. This comprehensive look at z-index should provide developers with an excellent foundation to be able to use this property confidently and effectively.</p>
                               </div>
                           </section>    
-        dummy ends -->
+        <!-- dummy ends -->
 
-         {{ content }} 
+        <!--{{ content }}--> 
       </div> 
       <!-- Article-body ends -->
 
