burger icon added and linked to sidenav
fully functional burger icon with toggle functionality added

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -11,7 +11,7 @@ hide_welcome_banner: true
     
     <!--  Side Nav Bar  -->
     <nav class="col-xs-2 bs-docs-sidebar">
-        <div id="myAffix" class="container" data-spy="affix">
+        <div class="container" data-spy="affix">
           <ul id="sidenav" class="nav nav-stacked">
             <li>
               <a href="#GroupA">Group A</a>
