--- a/_less/article.less
+++ b/_less/article.less
@@ -40,7 +40,8 @@
 
 #sidenav {
     border-right: 1px solid #e5e5e5;
-    margin-right: -120px;
+    margin-right: -110px;
+    display: none;
 }
 
 .fixed {
