--- a/_includes/article-breadcrumbs.html
+++ b/_includes/article-breadcrumbs.html
@@ -2,11 +2,18 @@
 
 	<div class="row">
 		<div class="bs-nav-titlebar">
-			<div class="col-xs-2">
-	        	<!-- burger icon -->
+			<div class="col-xs-2 title-left">
 
+				<!-- vertical line -->
+		        <div class="vertical-line"></div>
+
+	        	<a><div class="menu-box">
+		        	<!-- burger icon -->
+		        	<span class="icon-menu menu-icon"></span>
+		       	</div></a>
+		       
 	        </div>
-			<div class="col-xs-10">
+			<div class="col-xs-9">
 				<div class="bs-nav-titlebar-group">
 					{% if page.section_root == null || page.section_root == false %}
 					<a class="btn illumina-gray bs-nav-back" href="{{ site.baseurl }}/articles/">
