--- a/_less/breadcrumb.less
+++ b/_less/breadcrumb.less
@@ -2,7 +2,7 @@
 
 
 .bs-nav-titlebar {
-background: none repeat scroll 0 0 #ededed;
+background: #ededed;
 position: fixed;
 top: 65px;
 clear: both;
@@ -96,7 +96,71 @@ user-select: none;
 }
 
 .bs-nav-back-text {
-    
- padding-left: 3px;
-    
+  padding-left: 3px;
+}
+
+.title-left {
+	margin-right: -18px;
+	margin-left: 15px;
+	padding-right: 0px;
+}
+
+.menu-box {
+	float: right;
+	background-color: #ededed;;
+   	border-radius: 3px;
+  	width: 25px;
+   	height: 25px;
+   	color: #adadad;
+	font-size: 1em;
+	position: relative;
+	text-align: center;
+	margin-top: 5px;
+	margin-left: 10px;
+	cursor: pointer; 
+	cursor: hand;
+}
+
+.menu-box:hover {
+   background-color: #e4e4e4;
+}
+
+.menu-box-selected {
+   background-color: #e4e4e4;
+   border: 1px solid #cccccc;
+   cursor: pointer; 
+   cursor: hand;
+}
+
+.menu-icon {
+	top: 5px;
+	left: 5px;
+	position: absolute;
+	text-decoration: none;
+	z-index: 10;
+}
+
+.menu-icon:hover {
+   background-color: #e4e4e4;
+}
+
+.vertical-line {
+	border-right: 1px solid #d7d7d7;
+	height: 22px;
+	float: right;
+	width: 1px;
+	margin-top: 6px;
+	margin-left: 2px;
+}
+
+.vertical-line-toggle {
+	visibility: hidden;
+}
+
+.button:hover {
+   background-color: rgba(228,228,228,1);
+   border: solid 1px rgba(204,204,204,1);
+   color: rgba(0,0,0,1);
+}
+.button:active {
 }
