--- a/_less/font.less
+++ b/_less/font.less
@@ -34,11 +34,11 @@
 
 @font-face {
 	font-family: 'icomoon';
-	src:url('icomoon.eot?-nb9spv');
-	src:url('icomoon.eot?#iefix-nb9spv') format('embedded-opentype'),
-		url('icomoon.woff?-nb9spv') format('woff'),
-		url('icomoon.ttf?-nb9spv') format('truetype'),
-		url('icomoon.svg?-nb9spv#icomoon') format('svg');
+	src:url('fonts/icomoon.eot?r8hvei');
+	src:url('fonts/icomoon.eot?#iefixr8hvei') format('embedded-opentype'),
+		url('fonts/icomoon.woff?r8hvei') format('woff'),
+		url('fonts/icomoon.ttf?r8hvei') format('truetype'),
+		url('fonts/icomoon.svg?r8hvei#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -61,23 +61,26 @@
 	content: "\e600";
 }
 .icon-phone:before {
+	content: "\e601";
+}
+.icon-print:before {
+	content: "\e602";
+}
+.icon-bubbles:before {
+	content: "\e603";
+}
+.icon-wrench:before {
+	content: "\e604";
+}
+.icon-menu:before {
+	content: "\e605";
+}
+.icon-question:before {
 	content: "\e606";
 }
 .icon-envelope:before {
 	content: "\e607";
 }
-.icon-print:before {
-	content: "\e601";
-}
-.icon-bubbles:before {
-	content: "\e602";
-}
-.icon-wrench:before {
-	content: "\e603";
-}
-.icon-question:before {
-	content: "\e604";
-}
 .icon-arrow-right:before {
-	content: "\e605";
+	content: "\e608";
 }
