--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -10,7 +10,7 @@ hide_welcome_banner: true
   <div class="row">
     
     <!--  Side Nav Bar  -->
-    <nav class="col-xs-2 bs-docs-sidebar">
+    <nav class="col-xs-2 bs-docs-sidebar" align="right">
         <div class="container" data-spy="affix">
           <ul id="sidenav" class="nav nav-stacked">
             <li>
@@ -47,7 +47,7 @@ hide_welcome_banner: true
       <!-- Article Header ends -->
 
       <!-- Article Body -->
-      <div id="article-content">
+      <div class="article-content">
         <!-- dummy content for nav -->
 
                           <section id="GroupA" class="group">
