--- a/_less/accordioncustom.less
+++ b/_less/accordioncustom.less
@@ -1,19 +1,6 @@
-/* %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%
 
-                                           Grey Box Holding Accordion
-
-%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
-
-
-.accordian-holder {
-    
-        padding-top: 30px;
-        padding-bottom: 30px;   
-    
-}
-
-.accordian-container {
-    margin-top: 30px;
+.landing-page {
+  margin-top: 30px;
 }
 
 
