--- a/_less/article.less
+++ b/_less/article.less
@@ -14,7 +14,7 @@
     
 }
 
-#article-content {
+.article-content {
     margin-top: 10px;
 }
 
@@ -31,7 +31,7 @@
 }
 
 .bs-docs-sidebar {
-    text-align: right;
+ /*   text-align: right;*/
     margin-top: 50px;
     float: left;
 }
@@ -40,7 +40,7 @@
 
 #sidenav {
     border-right: 1px solid #e5e5e5;
-    margin-right: -110px;
+    margin-right: -115px; 
     display: none;
 }
 
