--- a/_less/variables.less
+++ b/_less/variables.less
@@ -12,12 +12,12 @@
 @bannergrey: #f2f2f2; //grey color for banner, callouts
 
 
-/* Call out colors */
+/* Callout colors */
 @vivid-blue-color: #5bc0de;        //code callout
 @earth-pumpkin-color: #f68920;     //Troubleshoot
+@note-green-color: #BAC147
 
 /* FONTS */
-
 @font-header: "HelveticaNeueW01-ThinEx 710288"; //HelveticaNeue Font
 @font-text: "Arial"; //Arial Font
 @font-color: #999999;  //Grey color for the font
@@ -48,6 +48,7 @@
   src: url('fonts/glyphicons-halflings-regular.eot');
   src: url('fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('fonts/glyphicons-halflings-regular.woff') format('woff'), url('fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
+
 .glyphicon {
   position: relative;
   top: 1px;
