Commenting out the dummy content for navigation
The placeholder content to demonstrate the navigation of the side nav.
Commented out to make place for the actual content, which should ideally
be indexed, to be spied by the sidenav.

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -48,7 +48,7 @@ hide_welcome_banner: true
 
       <!-- Article Body -->
       <div class="article-content">
-        <!-- dummy content for nav -->
+        <!-- dummy content for nav 
 
                           <section id="GroupA" class="group">
                               <h3>Group A</h3>
@@ -86,9 +86,9 @@ hide_welcome_banner: true
                                   <p>In this article, we’ll explain exactly what z-index is, how it has been misunderstood, and we’ll discuss some practical uses for it. We’ll also describe some of the browser differences that can occur, particularly in previous versions of Internet Explorer and Firefox. This comprehensive look at z-index should provide developers with an excellent foundation to be able to use this property confidently and effectively.</p>
                               </div>
                           </section>    
-        <!-- dummy ends -->
+         dummy ends -->
 
-        <!--{{ content }}--> 
+        {{ content }}
       </div> 
       <!-- Article-body ends -->
 
