--- a/_less/variables.less
+++ b/_less/variables.less
@@ -16,8 +16,7 @@
 /* Callout colors */
 @vivid-blue-color: #5bc0de;        //code callout
 @earth-pumpkin-color: #f68920;     //Troubleshoot
-@note-green-color: #BAC147
-
+@note-green-color: #BAC147;        //note
 /* FONTS */
 @font-header: "HelveticaNeueW01-ThinEx 710288"; //HelveticaNeue Font
 @font-text: "Arial"; //Arial Font
