font and layout improvements
- changes to font/layout/spacing
- some cleanup

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -14,21 +14,21 @@ hide_welcome_banner: true
         <div class="container" data-spy="affix">
           <ul id="sidenav" class="nav nav-stacked">
             <li>
-              <a href="#GroupA">Group A</a>
+              <a href="#GroupA">A big title</a>
               <ul class="nav nav-stacked">
                 <li><a href="#GroupASub1">Sub-Group 1</a></li>
                 <li><a href="#GroupASub2">Sub-Group 2</a></li>
               </ul>
             </li>
             <li>
-              <a href="#GroupB">Group B</a>
+              <a href="#GroupB">A very big title goes here actually</a>
               <ul class="nav nav-stacked">
                 <li><a href="#GroupBSub1">Sub-Group 1</a></li>
                 <li><a href="#GroupBSub2">Sub-Group 2</a></li>
               </ul>
             </li>
             <li>
-              <a href="#GroupC">Group C</a>
+              <a href="#GroupC">Another bigger title</a>
               <ul class="nav nav-stacked">
                 <li><a href="#GroupCSub1">Sub-Group 1</a></li>
                 <li><a href="#GroupCSub2">Sub-Group 2</a></li>
