--- a/_less/article.less
+++ b/_less/article.less
@@ -13,7 +13,14 @@
 }
 
 .article-content {
-    margin-top: 10px;
+    margin: 20px 40px 40px 0px;
+    font-family: @font-text;
+    color: @font-color;
+    line-height: @line-gap;
+}
+
+.article-content > p {
+    font-size: 14px;
 }
 
 .article-sidebar {
