--- a/_less/articlestep.less
+++ b/_less/articlestep.less
@@ -1,24 +1,23 @@
 .step-box-whole {
-	width: 100%;
+	width: 95%;
 	margin-top: 10px;
 	margin-bottom: 50px;
 }
 
 .left-column {
 	border-top: 4px solid #9EC4EB;
-	width: 8%;
+	width: 6.5%;
 	float: left;
 }
 
 .step-heading {
 	margin-top: 20px;
-	padding-left: 3px;
-	padding-right: 3px;
+	padding-left: 4%;
 }
 
 .the-step {
 	font-family: "pt-sans-regular";
-    font-size: 1em;
+    font-size: 130%;
     color: #bbbbbb;
     float: left;
     margin-top: -1px;
@@ -26,7 +25,7 @@
 
 .step-number {
 	font-family: Arial;
-    font-size: 2em;
+    font-size: 240%;
     color: #333333;
     font-weight: bold;
     float: right;
@@ -45,18 +44,18 @@
 	padding-left: 35px;
 	font-family: "HelveticaNeueW01-ThinEx 710288";
 	font-weight: bold;
-	font-size: 1.6em;
+	font-size: 170%;
 	letter-spacing: 2px;
     color: #666666;
 }
 
 .step-description {
-	font-family: "Arial";
-    font-size: 1.1em;
-    color: #999999;
+	font-family: @font-text;
+    font-size: 1.28em;
+    color: @font-color;
     padding-left: 35px;
     padding-top: 30px;
-    line-height: 160%;
+    line-height: @line-gap;
 }
 
 .step-image {
