--- a/_less/variables.less
+++ b/_less/variables.less
@@ -17,11 +17,13 @@
 @vivid-blue-color: #5bc0de;        //code callout
 @earth-pumpkin-color: #f68920;     //Troubleshoot
 @note-green-color: #BAC147;        //note
+
 /* FONTS */
 @font-header: "HelveticaNeueW01-ThinEx 710288"; //HelveticaNeue Font
 @font-text: "Arial"; //Arial Font
 @font-color: #999999;  //Grey color for the font
-@link-color: #3fa9f5;
+@link-color: #3fa9f5; // color for links
+@line-gap: 22px;
 
 /* Related Section Content */
 @border-color: #F2F2F2;
