--- a/_less/font.less
+++ b/_less/font.less
@@ -34,11 +34,11 @@
 
 @font-face {
 	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot?r8hvei');
-	src:url('fonts/icomoon.eot?#iefixr8hvei') format('embedded-opentype'),
-		url('fonts/icomoon.woff?r8hvei') format('woff'),
-		url('fonts/icomoon.ttf?r8hvei') format('truetype'),
-		url('fonts/icomoon.svg?r8hvei#icomoon') format('svg');
+	src:url('fonts/icomoon.eot?88hp36');
+	src:url('fonts/icomoon.eot?#iefix88hp36') format('embedded-opentype'),
+		url('fonts/icomoon.woff?88hp36') format('woff'),
+		url('fonts/icomoon.ttf?88hp36') format('truetype'),
+		url('fonts/icomoon.svg?88hp36#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -57,6 +57,9 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.icon-pencil:before {
+	content: "\e609";
+}
 .icon-file:before {
 	content: "\e600";
 }
@@ -72,11 +75,17 @@
 .icon-wrench:before {
 	content: "\e604";
 }
+.icon-cog:before {
+	content: "\e60a";
+}
 .icon-menu:before {
 	content: "\e605";
 }
 .icon-question:before {
 	content: "\e606";
+}
+.icon-info:before {
+	content: "\e60b";
 }
 .icon-envelope:before {
 	content: "\e607";
