fix font for callout

--- a/_less/callout.less
+++ b/_less/callout.less
@@ -89,6 +89,9 @@ border-left-color: @color;
 /* CONTENT FOR CALLOUT */
 
 .bs-callout-content {
-    font: 12px/1.2em @font-text, sans-serif;
+    font-size: 1.25em;
+    font-family: @font-text;
+    color: @font-color;
+    line-height: @line-gap;
 }
 
