fix for callout icon

--- a/_less/callout.less
+++ b/_less/callout.less
@@ -60,7 +60,7 @@ background-color: @bg-color;
 }
 
 .callout_note_icon{
-    .icon_display(@note-green-color);  //orange icon for troubleshoot
+    .icon_display(@note-green-color);  //green icon for note
 }
 
 .bs-callout-column-left {
@@ -86,7 +86,7 @@ background-color: @bg-color;
     font-weight: bold;
 }
 
-.bs-callout-tile-code{
+.bs-callout-title-code{
     .bs-callout-title(@vivid-blue-color);
 }
 
