--- a/_includes/article-breadcrumbs.html
+++ b/_includes/article-breadcrumbs.html
@@ -3,7 +3,7 @@
 	<div class="row">
 		<div class="bs-nav-titlebar">
 			<div class="col-xs-2 title-left">
-
+				{% if page.section_root == null || page.section_root == false %}
 				<!-- vertical line -->
 		        <div class="vertical-line"></div>
 
@@ -11,7 +11,7 @@
 		        	<!-- burger icon -->
 		        	<span class="icon-menu menu-icon"></span>
 		       	</div></a>
-		       
+		        {% endif %}
 	        </div>
 			<div class="col-xs-9">
 				<div class="bs-nav-titlebar-group">
